Fixed the grid in html and adjusted the columns and whitespace in the aside and main.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@ main img {
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    margin: 10px;
 }
 
 p {
@@ -39,6 +40,7 @@ aside {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     align-items: center;
+    text-align: center;
 }
 
 aside img {
@@ -49,8 +51,9 @@ aside img {
 
 aside h2 {
     position: absolute;
-    top: 25px;
-    left: 23px;
+    right: 0;
+    left: 0;
+    color: #fdfdfe;
 
 }
 
@@ -61,7 +64,7 @@ footer {
 }
 
 main {
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     margin: 1rem;
 }
 
@@ -87,5 +90,7 @@ header, footer, .grid {
 .grid {
     display: grid;
     align-items: center;
+    grid-template-columns: 1fr 1fr;
+
 }
 /* Last modified 20 March 2024 */
